--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <title>Nicolas Lépinay | Web Portfolio</title>
+    <title>Nicolas Lépinay | Accueil</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -34,11 +34,11 @@
 		    </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Accueil</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">Bio</a></li>
                     <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="experience.html">Experiences</a></li>
-                    <li class="nav-item"><a class="nav-link" href="work.html">Works</a></li>
+                    <li class="nav-item"><a class="nav-link" href="experience.html">Parcours</a></li>
+                    <li class="nav-item"><a class="nav-link" href="work.html">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
@@ -53,14 +53,15 @@
             <div class="row slider-text align-items-center align-items-stretch justify-content-between">
                 <div class="col-lg-6 text d-flex align-items-start align-items-sm-center">
                     <div class="desc mt-4 mt-md-0">
-                        <span class="subheading">UI/UX Designer &amp; Developer</span>
-                        <h1 class="mb-4">I'm John Schmidt</h1>
-                        <p><a href="#" class="btn btn-primary p-4 py-3">More About Me <span class="ion-ios-arrow-round-forward"></span></a> <a href="#" class="btn btn-white p-4 py-3">Hire Me <span class="ion-ios-arrow-round-forward"></span></a></p>
+                        <span class="subheading">Développeur junior</span>
+                        <h1 class="mb-4">Nicolas Lépinay</h1>
+                        <p><a href="pdf/CV - Nicolas_Lépinay.pdf" class="btn btn-primary p-4 py-3" download target="_blank">Télécharger mon CV <span class="ion-ios-arrow-round-down"></span></a> <a href="about.html" class="btn btn-white p-4 py-3">Qui suis-je ? <span class="ion-ios-arrow-round-forward"></span></a></p>
 
-                        <p class="mb-0 copyright">Copyright &copy;
+                        <!-- <p class="mb-0 copyright">Copyright &copy;
                             <script>
                                 document.write(new Date().getFullYear());
-                            </script> All rights reserved | This template is made with <i class="fa fa-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" rel="nofollow noopener">Colorlib</a></p>
+                            </script> All rights reserved | This template is made with <i class="fa fa-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" rel="nofollow noopener">Colorlib</a>
+                        </p> -->
                     </div>
                 </div>
                 <div class="col-lg-6 d-flex align-items-end justify-content-end">
