--- a/about.html
+++ b/about.html
@@ -67,26 +67,26 @@
                     <div class="row section-counter">
                         <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
                             <div class="counter-wrap">
-                                <span class="number"><span class="countup">5000</span></span>
-                                <span class="caption">Happy Clients</span>
+                                <span class="number"><span class="countup">5</span></span>
+                                <span class="caption">années de formation</span>
                             </div>
                         </div>
                         <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
                             <div class="counter-wrap">
-                                <span class="number"><span class="countup">1200</span></span>
-                                <span class="caption">Projects Done</span>
+                                <span class="number"><span class="countup">6</span></span>
+                                <span class="caption">projets étudiants réalisés</span>
                             </div>
                         </div>
                         <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
                             <div class="counter-wrap">
-                                <span class="number"><span class="countup">500</span></span>
-                                <span class="caption">Cups of Coffee</span>
+                                <span class="number"><span class="countup">100</span></span>
+                                <span class="caption">tasses de café</span>
                             </div>
                         </div>
                         <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
                             <div class="counter-wrap">
-                                <span class="number"><span class="countup">587</span></span>
-                                <span class="caption">Working Hourse</span>
+                                <span class="number"><span class="countup">800</span></span>
+                                <span class="caption">heures de cours</span>
                             </div>
                         </div>
                     </div>
@@ -94,8 +94,8 @@
                 <div class="col-md-6 heading-section d-flex align-items-center" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">
                     <div class="mt-5 mt-md-0">
                         <span class="subheading">Qui suis-je ?</span>
-                        <h2 class="mb-4">A UI/UX Designer &amp; Web Developer Based in Philippines</h2>
-                        <p class="">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                        <h2 class="mb-4">Un développeur full-stack junior basé à Aix-en-Provence</h2>
+                        <p class="">Je suis étudiant en seconde année de bachelor à l'école Ynov d'Aix-en-Provence. Je suis formé au réseau, au développement web, au développement d'applications mobiles et à l'ingénièrie logicielle.</p>
                         <div class="row mb-4">
                             <div class="col-lg-6">
                                 <ul class="about-info mt-4 px-md-0 px-2">
@@ -128,90 +128,82 @@
             <div class="row">
                 <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                     <div class="progress-wrap">
-                        <h3>Adobe Photoshop</h3>
+                        <h3>HTML5</h3>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
-                                <span>90%</span>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width:95%">
+                                <!-- <span>90%</span> -->
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                     <div class="progress-wrap">
-                        <h3>Figma</h3>
+                        <h3>SCSS</h3>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:95%">
-                                <span>95%</span>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                     <div class="progress-wrap">
-                        <h3>Adobe Illustrator</h3>
+                        <h3>JavaScript</h3>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
-                                <span>90%</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                     <div class="progress-wrap">
-                        <h3>Javascript</h3>
+                        <h3>Go</h3>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
-                                <span>85%</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                     <div class="progress-wrap">
-                        <h3>HTML5</h3>
+                        <h3>C++</h3>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width:95%">
-                                <span>95%</span>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
                     <div class="progress-wrap">
-                        <h3>CSS3</h3>
+                        <h3>Python</h3>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
-                                <span>90%</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700">
                     <div class="progress-wrap">
-                        <h3>WordPress</h3>
+                        <h3>Java</h3>
                         <div class="progress">
-                            <div class="progress-bar color-5" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                                <span>70%</span>
+                            <div class="progress-bar color-5" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
                     <div class="progress-wrap">
-                        <h3>Adobe XD</h3>
+                        <h3>PHP</h3>
                         <div class="progress">
                             <div class="progress-bar color-6" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-                                <span>80%</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="900">
                     <div class="progress-wrap">
-                        <h3>SEO</h3>
+                        <h3>C#</h3>
                         <div class="progress">
                             <div class="progress-bar color-6" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-                                <span>80%</span>
                             </div>
                         </div>
                     </div>
@@ -231,11 +223,34 @@
             <div class="row">
                 <div class="col-md-12" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                     <div class="carousel-testimony">
-                        <div class="item">
+                        <a href="https://www.linkedin.com/posts/aix-ynov-campus_forum-ytracker-is-over-f%C3%A9licitations-activity-6811682018653536256-h88R" target="_blank">
+
+                            <div class="item">
+                                <div class="testimony-wrap">
+                                    <div class="text">
+                                        <div class="d-flex align-items-center mb-4">
+                                            <div class="user-img" style="background-image: url(images/aix-ynov-campus.jpg)">
+                                                <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></div>
+                      </div>
+                      <div class="ps-3 tx">
+                        <p class="name">Aix Ynov Campus</p>
+                        <span class="position">Enseignement supérieur</span>
+                                                </div>
+                                            </div>
+                                            <p class="mb-4 msg" style="color:#999999;">
+                                                Félicitations aux étudiants de la formation informatique qui ont vécu 5 semaines de travail intensives en partant de 0 et qui ont atteint leur objectif en développant un forum exploitable au terme de leur première année de Bachelor 👍🏻
+                                                <br><br> Bravo à l’équipe gagnante “Fairfax” pour la réalisation de leur forum au concept très original : <strong>Virgil Nauleau, Nicolas Lépinay</strong>.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                        </a>
+
+                        <!-- <div class="item">
                             <div class="testimony-wrap">
                                 <div class="text">
                                     <div class="d-flex align-items-center mb-4">
-                                        <div class="user-img" style="background-image: url(images/person_1.jpg)">
+                                        <div class="user-img" style="background-image: url(images/person_2.jpg)">
                                             <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></div>
                       </div>
                       <div class="ps-3 tx">
@@ -246,75 +261,12 @@
                                         <p class="mb-4 msg">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="item">
-                                <div class="testimony-wrap">
-                                    <div class="text">
-                                        <div class="d-flex align-items-center mb-4">
-                                            <div class="user-img" style="background-image: url(images/person_2.jpg)">
-                                                <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></div>
-                      </div>
-                      <div class="ps-3 tx">
-                        <p class="name">Roger Scott</p>
-                        <span class="position">Marketing Manager</span>
-                                                </div>
-                                            </div>
-                                            <p class="mb-4 msg">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="testimony-wrap">
-                                        <div class="text">
-                                            <div class="d-flex align-items-center mb-4">
-                                                <div class="user-img" style="background-image: url(images/person_3.jpg)">
-                                                    <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></div>
-                      </div>
-                      <div class="ps-3 tx">
-                        <p class="name">Roger Scott</p>
-                        <span class="position">Marketing Manager</span>
-                                                    </div>
-                                                </div>
-                                                <p class="mb-4 msg">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="item">
-                                        <div class="testimony-wrap">
-                                            <div class="text">
-                                                <div class="d-flex align-items-center mb-4">
-                                                    <div class="user-img" style="background-image: url(images/person_1.jpg)">
-                                                        <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></div>
-                      </div>
-                      <div class="ps-3 tx">
-                        <p class="name">Roger Scott</p>
-                        <span class="position">Marketing Manager</span>
-                                                        </div>
-                                                    </div>
-                                                    <p class="mb-4 msg">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="item">
-                                            <div class="testimony-wrap">
-                                                <div class="text">
-                                                    <div class="d-flex align-items-center mb-4">
-                                                        <div class="user-img" style="background-image: url(images/person_2.jpg)">
-                                                            <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></div>
-                      </div>
-                      <div class="ps-3 tx">
-                        <p class="name">Roger Scott</p>
-                        <span class="position">Marketing Manager</span>
-                                                            </div>
-                                                        </div>
-                                                        <p class="mb-4 msg">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            </div> -->
+
+                        </div>
+                    </div>
+                </div>
+            </div>
     </section>
 
     <footer class="ftco-footer">
