--- a/experience.html
+++ b/experience.html
@@ -34,10 +34,10 @@
         </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Accueil</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Accueil</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">Bio</a></li>
                     <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="experience.html">Parcours</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="experience.html">Parcours</a></li>
                     <li class="nav-item"><a class="nav-link" href="work.html">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
@@ -62,47 +62,53 @@
     <section class="ftco-section">
         <div class="container-xl">
             <div class="row">
+
+                <!-- FORMATIONS -->
+
                 <div class="col-md-6">
                     <div class="resume-wrap d-flex align-item-stretch" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                         <div class="w-100">
                             <div class="icon"><span class="flaticon-graduated"></span></div>
-                            <span class="date">2014-2015</span>
-                            <h2>Master Degree of Design</h2>
-                            <span class="position"><i class="ion-ios-pin me-2"></i>Google Inc.</span>
-                            <p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+                            <span class="date">2023-2025</span>
+                            <h2>Mastère en Informatique</h2>
+                            <span class="position"><i class="ion-ios-pin me-2"></i>Aix Ynov Campus</span>
+                            <p class="mt-4">A venir.</p>
                         </div>
                     </div>
                     <div class="resume-wrap d-flex align-item-stretch" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                         <div class="w-100">
                             <div class="icon"><span class="flaticon-graduated"></span></div>
-                            <span class="date">2014-2015</span>
-                            <h2>Bachelor's Degree of C.A</h2>
-                            <span class="position"><i class="ion-ios-pin me-2"></i>Google Inc.</span>
-                            <p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+                            <span class="date">2020-2023</span>
+                            <h2>Bachelor en Informatique</h2>
+                            <span class="position"><i class="ion-ios-pin me-2"></i>Aix Ynov Campus</span>
+                            <p class="mt-4">HTML, SCSS, JavaScript, Go, C++, Python, SQLite, C#, PHP, Symfony, Java, Infrastructure & Réseau, Cybersécurité.</p>
                         </div>
                     </div>
                     <div class="resume-wrap d-flex align-item-stretch" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="900">
                         <div class="w-300">
                             <div class="icon"><span class="flaticon-graduated"></span></div>
-                            <span class="date">2014-2015</span>
-                            <h2>Diploma in Computer</h2>
-                            <span class="position"><i class="ion-ios-pin me-2"></i>Google Inc.</span>
-                            <p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+                            <span class="date">2015-2018</span>
+                            <h2>Licence d'Économie</h2>
+                            <span class="position"><i class="ion-ios-pin me-2"></i>Université d'Aix-Marseille</span>
+                            <p class="mt-4">Microéconomie, macroéconomie, mathématiques appliqués, Droit des affaires, sciences politiques, histoire, gestion de base de données.</p>
                         </div>
                     </div>
                 </div>
+
+                <!-- EXPERIENCES PROFESSIONNELLES -->
 
                 <div class="col-md-6">
                     <div class="resume-wrap d-flex align-item-stretch" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                         <div class="w-100">
                             <div class="icon"><span class="flaticon-work-from-home"></span></div>
-                            <span class="date">2014-2015</span>
-                            <h2>Art &amp; Creative Director</h2>
-                            <span class="position"><i class="ion-ios-pin me-2"></i>Google Inc.</span>
-                            <p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+                            <span class="date">2018 - aujourd'hui</span>
+                            <h2>Réceptionniste</h2>
+                            <span class="position"><i class="ion-ios-pin me-2"></i>Villa Gallici, Hôtel 5* Relais & Châteaux</span>
+                            <p class="mt-4">Accueil téléphonique et physique, gestion des réservations, comptabilité.</p>
                         </div>
                     </div>
-                    <div class="resume-wrap d-flex align-item-stretch" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+
+                    <!-- <div class="resume-wrap d-flex align-item-stretch" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                         <div class="w-100">
                             <div class="icon"><span class="flaticon-work-from-home"></span></div>
                             <span class="date">2015-2017</span>
@@ -110,8 +116,9 @@
                             <span class="position"><i class="ion-ios-pin me-2"></i>Google Inc.</span>
                             <p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
                         </div>
-                    </div>
-                    <div class="resume-wrap d-flex align-item-stretch" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
+                    </div> -->
+
+                    <!-- <div class="resume-wrap d-flex align-item-stretch" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
                         <div class="w-100">
                             <div class="icon"><span class="flaticon-work-from-home"></span></div>
                             <span class="date">2018-2020</span>
@@ -119,7 +126,8 @@
                             <span class="position"><i class="ion-ios-pin me-2"></i>Google Inc.</span>
                             <p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
                         </div>
-                    </div>
+                    </div> -->
+
                 </div>
             </div>
         </div>
