--- a/blog-single.html
+++ b/blog-single.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Schmidt - Free Bootstrap 5 Template by Colorlib</title>
+    <title>Nicolas Lépinay | Article de blog</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -27,14 +27,14 @@
         <!-- navbar-expand-lg  -->
         <div class="container-xl">
             <a class="navbar-brand align-items-center" href="index.html">
-                <span class="">Schmt.</span>
+                <span class="">NL.</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class=""></span> 
         </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Accueil</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Accueil</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">Bio</a></li>
                     <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
                     <li class="nav-item"><a class="nav-link" href="experience.html">Parcours</a></li>
@@ -93,7 +93,8 @@
                         <div class="desc">
                             <h3>George Washington</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos fugit cupiditate
-                                numquam!</p>
+                                numquam!
+                            </p>
                         </div>
                     </div>
 
@@ -109,7 +110,8 @@
                                     <h3>John Doe</h3>
                                     <div class="meta">January 07, 2021 at 10:10am</div>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus,
-                                        nihil?</p>
+                                        nihil?
+                                    </p>
                                     <p><a href="#" class="reply">Reply</a></p>
                                 </div>
                             </li>
@@ -122,7 +124,8 @@
                                     <h3>John Doe</h3>
                                     <div class="meta">January 07, 2021 at 10:10am</div>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus,
-                                        nihil?</p>
+                                        nihil?
+                                    </p>
                                     <p><a href="#" class="reply">Reply</a></p>
                                 </div>
 
@@ -135,7 +138,8 @@
                                             <h3>John Doe</h3>
                                             <div class="meta">January 07, 2021 at 10:10am</div>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus,
-                                                nihil?</p>
+                                                nihil?
+                                            </p>
                                             <p><a href="#" class="reply">Reply</a></p>
                                         </div>
 
@@ -166,7 +170,8 @@
                                     <h3>John Doe</h3>
                                     <div class="meta">January 07, 2021 at 10:10am</div>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus,
-                                        nihil?</p>
+                                        nihil?
+                                    </p>
                                     <p><a href="#" class="reply">Reply</a></p>
                                 </div>
                             </li>
