--- a/work.html
+++ b/work.html
@@ -107,7 +107,7 @@
                     <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b1-ascii.jpg);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
-                            <h3><a href="https://github.com/nicolas-lepinay/bachelor1-ascii">ASCII Art Generator</a></h3>
+                            <h3><a href="https://github.com/nicolas-lepinay/bachelor1-ascii" target="_blank">ASCII Art Generator</a></h3>
                             <span>Bachelor 1</span>
                         </div>
                     </div>
