--- a/about.html
+++ b/about.html
@@ -34,8 +34,8 @@
         </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Accueil</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">Bio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Accueil</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="about.html">Bio</a></li>
                     <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
                     <li class="nav-item"><a class="nav-link" href="experience.html">Parcours</a></li>
                     <li class="nav-item"><a class="nav-link" href="work.html">Portfolio</a></li>
@@ -101,12 +101,14 @@
                                 <ul class="about-info mt-4 px-md-0 px-2">
                                     <li class="d-flex"><span>Nom :</span> <span>Nicolas Lépinay</span></li>
                                     <li class="d-flex"><span>Âge :</span> <span>26 ans</span></li>
+                                    <li class="d-flex"><span>Lien Linkedin :</span> <span><a href="https://www.linkedin.com/in/nicolas-lepinay/" target="_blank"><i class="fa fa-linkedin"></i></a></span></li>
                                 </ul>
                             </div>
                             <div class="col-lg-6">
                                 <ul class="about-info mt-4 px-md-0 px-2">
                                     <li class="d-flex"><span>Lieu :</span> <span>Aix-en-Provence, France</span></li>
-                                    <li class="d-flex"><span>Email:</span> <span><a href="mailto:nicolaslepinay.contact@gmail.com" title="Envoyer un e-mail">nicolaslepinay.contact@gmail.com</a></span></li>
+                                    <li class="d-flex"><span>Email :</span> <span><a href="mailto:nicolaslepinay.contact@gmail.com" title="Envoyer un e-mail">nicolaslepinay.contact@gmail.com</a></span></li>
+                                    <li class="d-flex"><span>Lien GitHub :</span> <span><a href="https://github.com/nicolas-lepinay" target="_blank"><i class="fa fa-github"></i></a></span></li>
                                 </ul>
                             </div>
                         </div>
