--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
         <!-- navbar-expand-lg  -->
         <div class="container-xl">
             <a class="navbar-brand align-items-center" href="index.html">
-                <span class="">Schmt.</span>
+                <span class="">NL.</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class=""></span> 
@@ -52,8 +52,8 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-end justify-content-center">
                 <div class="col-md-9 pt-5 text-center">
-                    <p class="breadcrumbs"><span class="me-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>Blog <i class="fa fa-chevron-right"></i></span></p>
-                    <h1 class="mb-0 bread">Blog Posts</h1>
+                    <p class="breadcrumbs"><span class="me-2"><a href="index.html">Accueil <i class="fa fa-chevron-right"></i></a></span> <span>Blog <i class="fa fa-chevron-right"></i></span></p>
+                    <h1 class="mb-0 bread">Mes articles de blog</h1>
                 </div>
             </div>
         </div>
